# HFT-Challenge

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md
hftclient2026/: CMakeLists.txt  Parser.h  Profiler.h  main.cpp  mm.h
